2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.pcx: New files. Syntax definitions for the public
	* uuencode.pcx: commands of the packages base74, uuencode,
	* yencode.pcx: and yencode.

2008-05-28  Andreas Kupries  <andreask@activestate.com>

	* base64.tcl: Changed the default setting for -maxlen to 76 to
	* base64.man: coincide with MIME definitions and Trf, making
	* base64.test: the very fast path default, with no output reflow
	* pkgIndex.tcl: required at all. Bumped version to 2.4.

	** POTENTIAL INCOMPATIBILITY ** for all users depending on the
	  default setting to be 60.

2008-05-22  Andreas Kupries  <andreask@activestate.com>

	* base64.test: Extended with tests using bogus values of -maxchar,
	* base64.tcl: and non-standard values. Fixed bugs in the maxlen
	* base64.man: handling of the pure Tcl implementation which
	* pkgIndex.tcl: allowed the output to have more than maxlen
	  characters per line. Performance fix: Replaced Miguel's O(n^2)
	  reflow algorithm (maxlen handling after Trf) with Gustaf
	  Neumann's O(n) algorithm. Minor changes to the guarding
	  conditions by myself, and fixes for the fast cases. Bumped the
	  version to 2.3.3.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.man: Fixed all warnings due to use of now deprecated
	* uuencode.man: commands. Added a section about how to give
	* yencode.man: feedback.

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64c.tcl: Silence critcl warning.

2006-10-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.test: Documentation and code (error messages) disagreed