@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: uuencode.test,v 1.14 2006/10/14 06:30:55 andreas_kupries Exp $
+# RCS: @(#) $Id: uuencode.test,v 1.15 2008/12/12 04:57:46 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -18,13 +18,14 @@ testsNeedTcl     8.2
 testsNeedTcltest 1.0
 
 testing {
-    useLocal uuencode.tcl uuencode
+    useTcllibC
+    useLocalKeep uuencode.tcl uuencode
 }
 
 # -------------------------------------------------------------------------
 
 set trf 0
-if {[info command ::uuencode::CEncode] != {}} {
+if {[llength [info commands ::uuencode::CEncode]]} {
     puts "> critcl based"
 } elseif {[package provide Trf] != {}} {
     puts "> Trf based"
